--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </h3>
             
             <div class="mt-12 flex flex-wrap justify-center md:justify-start gap-4">
-                <button onclick="scrollToSection('projects')" class="btn-glow px-8 py-4 bg-indigo-600 rounded-full font-bold transition-all hover:pr-12">See Apple App</button>
+                <button onclick="scrollToSection('projects')" class="btn-glow px-8 py-4 bg-indigo-600 rounded-full font-bold transition-transform hover:scale-105 duration-70">See Apple App</button>
                 <button onclick="scrollToSection('design')" class="btn-glow px-8 py-4 glass rounded-full font-bold">Jersey Portfolio</button>
             </div>
         </div>
